syntax = "proto3";

package health_check.v1;

import "google/protobuf/empty.proto";

// HealthCheckService defines the gRPC service for health checking.
service HealthCheckService {
  // rpc to check the health status of the service
  rpc CheckAppHealth(google.protobuf.Empty) returns (HealthCheckResponse) {}
  // rpc to check database connectivity
  rpc CheckDatabaseConnection(google.protobuf.Empty) returns (HealthCheckResponse) {}
}

// HealthCheckResponse represents the health status response.
message HealthCheckResponse {
  bool serving = 1;
  string message = 2;
}

// Command to generate TypeScript code with NestJS options
// protoc -I ./proto ./proto/health-check.proto --ts_proto_out=./src/generated-types --ts_proto_opt=nestJs=true